--- a/stylesheets/_message.scss
+++ b/stylesheets/_message.scss
@@ -48,6 +48,7 @@
   padding-top: 0.1em;
   padding-right: 15px;
   padding-left: 0.1em;
+  font-size: 14.5px;
   word-break: break-word;
   white-space: pre-line;
 }
@@ -135,7 +136,6 @@
   z-index: 8;
   padding-bottom: 1em;
   color: white;
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
 
 .message.flip .front {
