Better delete icon position

--- a/stylesheets/_message.scss
+++ b/stylesheets/_message.scss
@@ -63,9 +63,9 @@
 
     &.delete-link {
       top: auto;
-      right: auto;
-      bottom: 17px;
-      left: 65px;
+      right: 12px;
+      bottom: 12px;
+      left: auto;
       font-size: 1em;
     }
   }
