--- a/components/mainPage.html
+++ b/components/mainPage.html
@@ -23,7 +23,9 @@
     </div>
     <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
     <script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
-    <br />
+    <a class="sponsor-link" href="https://opencollective.com/distributed/backer/0/website" target="_blank"><img src="https://opencollective.com/distributed/backer/0/avatar.svg" alt="Become a Backer"></a>
+    <a class="sponsor-link" href="https://opencollective.com/distributed/sponsor/0/website" target="_blank"><img src="https://opencollective.com/distributed/sponsor/0/avatar.svg" alt="Become a Sponsor"></a>
+    <script async type='text/javascript' src='//cdn.carbonads.com/carbon.js?zoneid=1698&serve=CVYD42E&placement=funretrogithubio' id='_carbonads_js'></script>
     <a href="https://github.com/funretro/distributed/blob/master/PRIVACY.MD" target="_black">Read the Privacy Policy</a>
     <p class="website">Learn more about retrospectives at <a href="http://funretrospectives.com" target="_blank">funretrospectives.com</a></p>
   </section>
