--- a/components/menu.html
+++ b/components/menu.html
@@ -4,7 +4,7 @@
     <i class="fa fa-pencil" ng-show="!editingBoardName"></i>
   </span>
   <span ng-show="editingBoardName" class="editing-board-name">
-    <input title="edit the board name" ng-model="newBoardName"></input>
+    <input title="edit the board name" ng-model="newBoardName" focus></input>
     <button ng-click="changeBoardName(newBoardName);editingBoardName=false;" class="success-button">Save</button>
     <a class="blue" ng-click="editingBoardName=false;">Cancel</a>
   </span>
