Adding dragula for ordering cards

--- a/components/mainContent.html
+++ b/components/mainContent.html
@@ -9,29 +9,29 @@
   <button class="pull-right new-column" ng-show="board.columns.length < 6" ng-click="modalService.openAddNewColumn(this)">New column</button>
 </div>
 <span class="container">
-    <span ng-show="boardId !== ''" class="message-list" x-lvl-drop-target="true" x-on-drop="droppedEvent(dragEl, dropEl)" data-column-id="{{type.id}}" ng-class="{'selected': isColumnSelected(type.id)}" ng-repeat="type in board.columns">
-        <ul class="column {{utils.columnClass(type.id)}}">
-          <div class="column-header">
-            <a class="controls delete" ng-show="!editing && board.columns.length > 1" href="javascript:void(0)" ng-click="modalService.openDeleteColumn(this)" aria-label="Delete colummn"><i class="fa fa-times"></i></a>
-            <h2 ng-show="!editing" ng-click="editing = true; newName=type.value;">
-              {{type.value}}
-            </h2>
-            <a ng-show="!editing" class="add" ng-click="addNewMessage(type)" href="javascript:void(0)" aria-label="Add new message"><i class="fa fa-plus"></i></a>
-          </div>
-          <div class="editing-column" ng-show="editing">
-              <input id="new_name_{{ type.id }}" ng-model="newName" focus></input>
-              <div>
-                <button ng-click="changeColumnName(type.id, newName);editing=false" class="success-button">Save</button>
-                <a class="blue" ng-click="editing=false;">Cancel</a>
-              </div>
-          </div>
-          <li ng-controller="MessageCtrl" id="{{ message.$id }}" enter-click class="message" ng-class="{'flip': isEditing}" ng-repeat="message in messages | filter: {type: {id: type.id}, text: filterMessage} | orderBy: getSortFields()">
-            <div messageId="{{ message.$id }}" x-lvl-draggable x-lvl-drop-target="true" x-on-drop="dropCardOnCard(dragEl, dropEl)" draggable="{{ !isEditing }}">
-
-              <div class="front" ng-class="{'filter': message.creating}">
+  <span ng-show="boardId !== ''" class="message-list" data-column-id="{{column.id}}" ng-class="{'selected': isColumnSelected(column.id)}" ng-repeat="column in boardObject.columns">
+    <div class="column-header">
+      <a class="controls delete" ng-show="!editing && board.columns.length > 1" href="javascript:void(0)" ng-click="modalService.openDeleteColumn(this)" aria-label="Delete colummn"><i class="fa fa-times"></i></a>
+      <h2 ng-show="!editing" ng-click="editing = true; newName=column.value;">
+        {{column.value}}
+      </h2>
+      <a ng-show="!editing" class="add" ng-click="addNewMessage(column)" href="javascript:void(0)" aria-label="Add new message"><i class="fa fa-plus"></i></a>
+    </div>
+    <div class="editing-column" ng-show="editing">
+        <input id="new_name_{{ column.id }}" ng-model="newName" focus></input>
+        <div>
+          <button ng-click="changeColumnName(column.id, newName);editing=false" class="success-button">Save</button>
+          <a class="blue" ng-click="editing=false;">Cancel</a>
+        </div>
+    </div>
+    <ul class="column" id="{{ column.id }}" dragula='"bag-one"' dragula-model="column.messages" dragula-scope="$parent">
+      <li id="{{ message.$id }}" enter-click class="message" ng-class="{'flip': isEditing}" ng-repeat="messageObjId in column.messages">
+          <div ng-init="message = getMessageObj(messageObjId)" messageId="{{ message.$id }}">
+              <div class="front {{utils.frontClass(column.id)}}" ng-class="{'filter': message.creating}">
                   <div class="message-body">
                       <div class="text">{{message.text}}</div>
                       <a href="javascript:void(0)" class="pencil" ng-click="isEditing = true; utils.focusElement(message.$id);" aria-label="Edit message"><i class="fa fa-pencil"></i></a>
+                      </div>
                   </div>
                   <div class="votes">
                       <a ng-show="voteService.canUnvoteMessage(userId, message.$id)" href="javascript:void(0)" ng-click="voteService.unvote(userId, message.$id, message.votes)" aria-label="Unvote">
@@ -48,7 +48,7 @@
                       </strong>
                   </div>
               </div>
-              <div class="back">
+              <div class="back {{utils.backClass(column.id)}}">
                   <div class="message-body">
                       <div class="editing">
                           <textarea data-emoji-picker="true" ng-model="message.text" ng-change="messages.$save(message)" aria-label="Message text entry"></textarea>
