--- a/components/sidebar.html
+++ b/components/sidebar.html
@@ -10,7 +10,7 @@
     <button class="normal-button" ng-click="importExportService.generatePdf(board, messages, sortField)"><i class="fa fa-download"></i>Export board to PDF</button>
     <button class="normal-button" ng-click="modalService.openImportBoard(this)"><i class="fa fa-upload"></i>Import CSV</button>
     <button class="normal-button" ng-click="modalService.openVoteSettings(this)"><i class="fa fa-thumbs-up"></i>Vote settings</button>
-    <button class="normal-button" ng-click="modalService.openCardSettings(this)"><i class="fa fa-thumbs-up"></i>Card settings</button>
+    <button class="normal-button" ng-click="modalService.openCardSettings(this)"><i class="fa fa-sticky-note"></i>Card settings</button>
     <button class="delete-button" ng-click="modalService.openDeleteCards(this)"><i class="fa fa-trash"></i>Delete cards</button>
     <button class="delete-button" ng-click="modalService.openDeleteBoard(this)"><i class="fa fa-trash"></i>Delete board</button>
   </div>
