--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -10,5 +10,6 @@
 @import 'spinner';
 @import 'menu';
 @import 'voteSettings';
+@import 'textPrivacySettings';
 @import 'about';
 @import 'sidebar';
