--- a/components/mainContent.html
+++ b/components/mainContent.html
@@ -44,7 +44,9 @@
                         <a ng-class="{'disabled': !voteService.isAbleToVote(userId, maxVotes, messages)}" href="javascript:void(0)" ng-click="voteService.vote(userId, maxVotes, messages, message.$id, message.votes)" aria-label="Vote">
                             <i class="fa fa-thumbs-o-up"></i>
                         </a>
-                        {{ message.votes }}
+                        <span ng-hide="hidevote">
+                          {{ message.votes }}                         
+                        </span>
                       </strong>
                   </div>
               </div>
