Adding funretro.io

--- a/components/mainPage.html
+++ b/components/mainPage.html
@@ -1,4 +1,10 @@
 <div class="home" ng-show="userId === ''" ng-cloak>
+  <div class="funretro-pro">
+    <p>
+      <strong>Funretro.io</strong> New paid version with Login, Teams, Dashboard and more Security.
+      <a class="button" href="https://funretro.io/#/register" target="_blank">Check it out</a>
+    </p>
+  </div>
   <section>
     <h1><img src="img/logo.png" alt="fun retro logo" />Fun Retro</h1>
     <button ng-click="modalService.openAddNewBoard(this)">NEW BOARD</button>
@@ -23,8 +29,6 @@
     </div>
     <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
     <script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
-    <a class="sponsor-link" href="https://opencollective.com/distributed/backer/0/website" target="_blank"><img src="https://opencollective.com/distributed/backer/0/avatar.svg" alt="Become a Backer"></a>
-    <a class="sponsor-link" href="https://opencollective.com/distributed/sponsor/0/website" target="_blank"><img src="https://opencollective.com/distributed/sponsor/0/avatar.svg" alt="Become a Sponsor"></a>
     <script async type='text/javascript' src='//cdn.carbonads.com/carbon.js?zoneid=1698&serve=CVYD42E&placement=funretrogithubio' id='_carbonads_js'></script>
     <a href="https://github.com/funretro/distributed/blob/master/PRIVACY.MD" target="_black">Read the Privacy Policy</a>
     <p class="website">Learn more about retrospectives at <a href="http://funretrospectives.com" target="_blank">funretrospectives.com</a></p>
