--- a/stylesheets/_voteSettings.scss
+++ b/stylesheets/_voteSettings.scss
@@ -10,3 +10,10 @@
   margin-right: 3px;
   border-radius: 3px;
 }
+
+.ngdialog.ngdialog-theme-plain .ngdialog-content button.hide-vote {
+  min-width: 80px;
+  margin-left: 0;
+  border-radius: 3px;
+  margin-top: 0;
+}
