--- a/stylesheets/_menu.scss
+++ b/stylesheets/_menu.scss
@@ -100,7 +100,7 @@
   }
 }
 
-.ngdialog.ngdialog-theme-plain .ngdialog-content button.hide-vote {
+.ngdialog.ngdialog-theme-plain .ngdialog-content .hide-vote {
   min-width: 80px;
   margin-left: 0;
   border-radius: 3px;
