--- a/stylesheets/_voteSettings.scss
+++ b/stylesheets/_voteSettings.scss
@@ -11,7 +11,7 @@
   border-radius: 3px;
 }
 
-.ngdialog.ngdialog-theme-plain .ngdialog-content button.hide-vote {
+.ngdialog.ngdialog-theme-plain .ngdialog-content .hide-vote {
   min-width: 80px;
   margin-left: 0;
   border-radius: 3px;
