--- a/components/mainPage.html
+++ b/components/mainPage.html
@@ -2,7 +2,7 @@
   <div class="funretro-pro">
     <p>
       <strong>Funretro.io</strong> New paid version with Login, Teams, Dashboard and more Security.
-      <a class="button" href="https://funretro.io/#/register" target="_blank">Check it out</a>
+      <a class="button" href="https://funretro.io/" target="_blank">Check it out</a>
     </p>
   </div>
   <section>
