--- a/components/mainPage.html
+++ b/components/mainPage.html
@@ -1,7 +1,7 @@
 <div class="home" ng-show="userId === ''" ng-cloak>
   <div class="funretro-pro">
     <p>
-      <strong>Funretro.io</strong> New paid version with Login, Teams, Dashboard and more Security.
+      <strong>Funretro.io</strong> New premium version with Login, Teams, Dashboard and more Security.
       <a class="button" href="https://funretro.io/" target="_blank">Check it out</a>
     </p>
   </div>
