--- a/components/menu.html
+++ b/components/menu.html
@@ -15,7 +15,7 @@
   </select>
   <input class="filter-message" placeholder="Filter your cards" ng-model="filterMessage" aria-label="Filter your cards" />
   <span ng-show="voteService.remainingVotes(userId, maxVotes, messages) < maxVotes" class="remaining-votes">Remaining votes: <strong>{{ voteService.remainingVotes(userId, maxVotes, messages) }}</strong>
-    <span class="null-blank-space">&nbsp</span>
+    <span class="null-blank-space">&nbsp;</span>
     <span class="settings" ng-click="modalService.openVoteSettings(this)"><i class='fa fa-pencil fa-md'></i></span>
   </span>
   <span class="pull-right menu-controls">
